Background and Lattice QCD chapters 100% finalized.

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -9952,4 +9952,37 @@ abstract = "A renormalization group strategy for the study of bound states in fi
 						            reportNumber   = "HUTP-90/A007",
 							          SLACcitation   = "%%CITATION = PHLTA,B240,447;%%"
 								  }
-								  
+
+
+@article{PhysRev.96.1124,
+  title = {Properties of Bethe-Salpeter Wave Functions},
+    author = {Wick, G. C.},
+      journal = {Phys. Rev.},
+        volume = {96},
+	  issue = {4},
+	    pages = {1124--1134},
+	      numpages = {0},
+	        year = {1954},
+		  month = {Nov},
+		    publisher = {American Physical Society},
+		      doi = {10.1103/PhysRev.96.1124},
+		        url = {https://link.aps.org/doi/10.1103/PhysRev.96.1124}
+			}
+
+
+
+
+@inproceedings{Symanzik:1981hc,
+      author         = "Symanzik, K.",
+            title          = "{Some Topics in Quantum Field Theory}",
+	          booktitle      = "{
+Mathematical Problems in Theoretical Physics.
+Proceedings, 6th interational conference on mathematical phyiscs, West Berlin, Germany, August 11-20, 1981
+}",
+			      url            = "http://www-library.desy.de/cgi-bin/showprep.pl?DESY-81-068",
+			            year           = "1981",
+				          pages          = "47-58",
+					        reportNumber   = "DESY-81-068, C81-08-11-4",
+						      SLACcitation   = "%%CITATION = DESY-81-068;%%"
+						      }
+
