--- a/Thesis.bib
+++ b/Thesis.bib
@@ -9986,3 +9986,57 @@ Proceedings, 6th interational conference on mathematical phyiscs, West Berlin, G
 						      SLACcitation   = "%%CITATION = DESY-81-068;%%"
 						      }
 
+
+
+
+@TECHREPORT{Shewchuk94anintroduction,
+    author = {Jonathan Richard Shewchuk},
+        title = {An introduction to the conjugate gradient method without the agonizing pain},
+	    institution = {},
+	        year = {1994}
+		}
+
+@inproceedings{Weber:2013eba,
+      author         = "Wagner, Marc and Diehl, Stefan and Kuske, Till and Weber,
+                        Johannes",
+			      title          = "{An introduction to lattice hadron spectroscopy for
+                        students without quantum field theoretical background}",
+			      year           = "2013",
+			            eprint         = "1310.1760",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-lat",
+						      SLACcitation   = "%%CITATION = ARXIV:1310.1760;%%"
+						      }
+
+
+@article{Neubert:1997gu,
+      author         = "Neubert, Matthias",
+            title          = "{B decays and the heavy quark expansion}",
+	          journal        = "Adv. Ser. Direct. High Energy Phys.",
+		        volume         = "15",
+			      year           = "1998",
+			            pages          = "239-293",
+				          doi            = "10.1142/9789812812667_0003",
+					        note           = "[,239(1997)]",
+						      eprint         = "hep-ph/9702375",
+						            archivePrefix  = "arXiv",
+							          primaryClass   = "hep-ph",
+								        reportNumber   = "CERN-TH-97-024, CERN-TH-97-24",
+									      SLACcitation   = "%%CITATION = HEP-PH/9702375;%%"
+									      }
+
+
+@Inbook{tHooft1979,
+author="'t Hooft, G.",
+editor="Zichichi, Antonino",
+title="Can We Make Sense Out of ``Quantum Chromodynamics''?",
+bookTitle="The Whys of Subnuclear Physics",
+year="1979",
+publisher="Springer US",
+address="Boston, MA",
+pages="943--982",
+abstract="``Quantum Chromodynamics'' is a pure gauge theory of fermions and vector bosons that is assumed to describe the observed strong interactions. To get an accurate theory it is mandatory to go beyond the usual perturbation of expansion. Not only must we explore the mathematics of solving the field equations non-perturbatively; it is more important and more urgent first to find a decent formualtion of these equations themselves, in such a way that it can be shown that the solution is uniquely determined by these equations. We understand how to renormalize the theory to any finite order in the perturbation expansion, but it is expected that this expansion will diverge badly, for any value of the coupling constant. Thus the expansion itself does not yet define the theory. But the renormalization procedure is not known to work beyond the perturbation expansion.",
+isbn="978-1-4684-0991-8",
+doi="10.1007/978-1-4684-0991-8_17",
+url="https://doi.org/10.1007/978-1-4684-0991-8_17"
+}
