--- a/nrqcd.tex
+++ b/nrqcd.tex
@@ -349,7 +349,7 @@ We give an outline of the calculation here for completeness, but the crucial fin
 \hspace{-40pt}
  \begin{tabular}{c c c c c c c c c c c}
  \hline
- Set & handle & $am^{\text{val}}_{s0}$ & $am^{\text{val}}_{c0}$ & $am^{\text{val}}_{b0}$ & $u_0$ & $c_{1,6}$ & $c_5$ & $c_4$ & $\{T\}$ & $a_{\text{sm}}/a$ \\ [0.5ex] 
+ Set & handle & $am^{\text{val}}_{s0}$ & $am^{\text{val}}_{c0}$ & $am^{\text{val}}_{b0}$ & $u_0$ & $c_{1,6}$ & $c_5$ & $c_4$ & $T/a$ & $a_{\text{sm}}/a$ \\ [0.5ex] 
  \hline
  0 & {\textbf{very coarse}} & 0.0705 & 0.826 & 3.297 & 0.8195 & 1.36 & 1.21 & 1.22 & 8, 11, 14 & 0, 2.0, 4.0 \\ [1ex]
  1 & {\textbf{coarse}} & 0.0541 & 0.645 & 2.66 & 0.8340 & 1.31 & 1.16 & 1.20 & 9, 12, 15 & 0, 2.0, 4.0 \\ [1ex]
