--- a/Thesis.bib
+++ b/Thesis.bib
@@ -10040,3 +10040,15 @@ isbn="978-1-4684-0991-8",
 doi="10.1007/978-1-4684-0991-8_17",
 url="https://doi.org/10.1007/978-1-4684-0991-8_17"
 }
+
+@article{McLean:2019sds,
+      author         = "McLean, E. and Davies, C. T. H. and Lytle, A. T. and
+                        Koponen, J.",
+			      title          = "{Lattice QCD form factor for $B_s\to D_s^* l\nu$ at zero
+                        recoil with non-perturbative current renormalisation}",
+			      year           = "2019",
+			            eprint         = "1904.02046",
+				          archivePrefix  = "arXiv",
+					        primaryClass   = "hep-lat",
+						      SLACcitation   = "%%CITATION = ARXIV:1904.02046;%%"
+						      }
