--- a/Thesis.tex
+++ b/Thesis.tex
@@ -22,6 +22,12 @@ It also seems traditional to acknowledge the other students in the group, for li
 \tableofcontents
 \mainmatter
 
+\pagestyle{fancy}
+\fancyhf{}
+\fancyhead[LE,RO]{\thepage}
+\fancyhead[RE]{\nouppercase{\leftmark}}
+\fancyhead[LO]{\nouppercase{\rightmark}}
+
 \include{intro}
 
 \include{background} % background and motivation
