--- a/conclusions.tex
+++ b/conclusions.tex
@@ -1,12 +1,13 @@
 ﻿\chapter{Conclusions}
 
-In this work, I have demonstrated some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge as fast as one may hope. $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligable pieces of the spacial vector current have large magnitudes:
+In this work, I have discovered some problems with using NRQCD-HISQ currents to compute semileptonic $b\to c$ transitions on the lattice. Namely, it was discovered that the expansion of NRQCD-HISQ currents do not converge very fast. $\order{1/m_b^2}$ terms are important for the dispersion relation of heavy-light mesons. So-called negligable pieces of the spacial vector current have large magnitudes:
 \begin{align}
-  V_k^{(2)}\sim V_k^{(4)} \sim 0.35\times V_k^{(0)}.
+  V_k^{(2)}\sim V_k^{(4)} \sim 0.35\times V_k^{(0)}\,.
 \end{align}
 I attempted some approaches to non-perturbatively renormalizing the NRQCD-HISQ currents in order to account for these issues, with limited success. 
 
-We produced the first published results of applying the heavy-HISQ approach to semileptonic form factors. We found a new determination of $h_{A_1}^s(1)$, twice as accurate as the previous result and containing considerably fewer assumptions -
+We
+produced the first published results of applying the heavy-HISQ approach to semileptonic form factors. We found a new determination of $h_{A_1}^s(1)$, twice as accurate as the previous result and containing considerably fewer assumptions -
 \begin{align}
   \mathcal{F}^{B_s\to D_s^*}(1) = h^s_{A_1}(1) = 0.9020(96)_{\text{stat}}(90)_{\text{sys}}\,.
 \end{align}
