--- a/latticecalcs.tex
+++ b/latticecalcs.tex
@@ -3,7 +3,7 @@
 
 The last chapter focused on how to discretize the QCD action. This chapter is focused on the practical side of lattice QCD - given a lattice action, how does one perform the functional integral to determine expectation values?
 
-\section{Evaluating Lattice Correlation Functions}
+\section{Evaluation of Lattice Correlation Functions}
 
 All physics of a quantum field theory can be extracted from correlation functions. So a typical lattice calculation involves computing a correlation function (or just {\it{correlator}}) on the lattice, then extracting physical quantities from it. A typical correlator that is computed on the lattice is a 2-point meson correlator, i.e. $\langle\Phi(x)\Phi^{\dagger}(y)\rangle$ where $\Phi$ is a meson creation operator and $\Phi^{\dagger}$ is an annihilation operator. This is a good working example for showing the steps in a lattice calculation, the generalization to $N$-point correlators is reasonably natural.
 
