--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,7 +1,8 @@
 \begin{titlepage}
 \begin{center}
 \vspace*{0.8cm}
-\noindent {\Huge \textbf{Heavy Meson Semileptonic Form Factors from Lattice Quantum Chromodynamics}} \\
+%\noindent {\Huge \textbf{Heavy Meson Semileptonic Form Factors from Lattice Quantum Chromodynamics}} \\
+\noindent {\Huge \textbf{Semileptonic $b\to c$ Form Factors from Lattice Quantum Chromodynamics}} \\
 \vspace*{0.5cm}
 \noindent \LARGE Euan McLean \\
 \vspace*{1.3cm}
@@ -42,9 +43,9 @@
 \begin{center}
 {\large\textbf{Declaration of originality}}
 \end{center}
-This thesis is my own work, except where explicit attribution to others is made. In particular chapter \ref{chap:BsDsstar} is based on the now published [{\red{not out yet!}}], and chapter \ref{chap:BsDs} is based on [{\red{not out yet!}}].
+This thesis is my own work, except where explicit attribution to others is made. Chapter \ref{chap:BsDsstar} is based on work presented in \cite{McLean:2019sds}, written in collaboration with Christine Davies, Andrew Lytle and Jonna Koponen. Chapter \ref{chap:BsDs} is based on work from a soon-to-be-released paper by the same authors.
 
-All results and figures presented in these chapters are my own, except for figures \ref{fig:ckmpdg} and \ref{fig:alpha_s} which are courtesy of the Particle Data Group \cite{PhysRevD.98.030001}, fig. \ref{fig:ckmpdg} from the HFLAV collaboration \cite{HFLAV16}, fig. \ref{fig:McNeile} was produced by McNeile et. al \cite{McNeile:2012qf}. I also quote results from an in-progress study \cite{Colquhoun:2016osw} in Eq. \eqref{eq:Andrews_numbers}.
+All results and figures presented are my own, except for Fig. \ref{fig:alpha_s} which is courtesy of the Particle Data Group \cite{PhysRevD.98.030001}, Fig. \ref{fig:ckmpdg} from the HFLAV collaboration \cite{HFLAV16}, and Fig. \ref{fig:McNeile} from McNeile et. al \cite{McNeile:2012qf}. I also quote results from an in-progress study \cite{Colquhoun:2016osw} in Eq. \eqref{eq:Andrews_numbers}.
     
 \noindent\rule[2pt]{\textwidth}{0.5pt}
 \end{vcenterpage}
@@ -53,12 +54,12 @@ All results and figures presented in these chapters are my own, except for figur
 
 \thispagestyle{empty}
 
-\vspace*{\stretch{2}}
-\begin{center}
-  %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
-  \emph{'Everything I know right now is probably wrong.'} - wdbm
-\end{center}
-\vspace{\stretch{3}}
+%% \vspace*{\stretch{2}}
+%% \begin{center}
+%%   %% \emph{'Part of being a winner is knowing when enough is enough. Sometimes you have to give up the fight and walk away, and move on to something that's more productive.'} - Donald Trump
+%%   \emph{'Everything I know right now is probably wrong.'} - wdbm
+%% \end{center}
+%% \vspace{\stretch{3}}
 
 \end{titlepage}
 \sloppy
